# Operating-Systems-labs-2023

lab1/: README.md  build.sh  config.cfg  config.cpp  config.h  daemon.cpp  daemon.h  main.cpp
lab2/: CMakeLists.txt  README.md  build.sh
lab2/client/: client.cpp  client.h  client_implement.cpp
lab2/connections/conn_interfaces/: conn.h  message.h
lab2/connections/src/: conn_fifo.cpp  conn_mq.cpp  conn_sock.cpp
lab2/host/: host.cpp  host.h  host_implement.cpp
lab3/: README.md  makefile  test.cfg
lab3/src/: main.cpp
lab3/src/lazy_list/: lazy_list.h  lazy_list.hpp
lab3/src/optimistic_list/: optimistic_list.h  optimistic_list.hpp
lab3/src/parser/: parser.cpp  parser.h
lab3/src/shared/: collector.h  set.h  timer.h  util.h
lab3/src/shared/logger/: logger.cpp  logger.h
lab3/src/shared/min_max/: max_value.h  min_value.h
lab3/src/shared/set_creator/: set_creator.h  set_creator.hpp
lab3/src/test/: test.h  tester.h  tester.hpp
lab3/src/test/compare_test/: compare_test.h  compare_test.hpp
lab3/src/test/general_test/: general_test.h  general_test.hpp
lab3/src/test/read_test/: read_test.h  read_test.hpp
lab3/src/test/test_creator/: test_creator.h  test_creator.hpp
lab3/src/test/write_test/: write_test.h  write_test.hpp
