cmake_minimum_required(VERSION 3.17)

project(WolfAndGoats VERSION 0.1 LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_compile_options(-Wall -Werror)

find_library (LIBRT rt)
find_package (Threads)

file(GLOB CONNS connections/src/conn_*.cpp)
file(GLOB CLIENT client/*.cpp client/*.h)
file(GLOB HOST host/*.cpp host/*.h)
file(GLOB INTERFACE connections/conn_interfaces/*.h)

foreach(PATH_TO_CONN ${CONNS})
    get_filename_component(FILE_NAME ${PATH_TO_CONN} NAME_WLE )
    string(REGEX REPLACE "conn_" "" CONN_NAME ${FILE_NAME})
    
    add_executable(host_${CONN_NAME} ${HOST} ${INTERFACE}
        connections/src/conn_${CONN_NAME}.cpp)

    add_executable(client_${CONN_NAME} ${CLIENT} ${INTERFACE}
        connections/src/conn_${CONN_NAME}.cpp)
       
    target_link_libraries(host_${CONN_NAME} PUBLIC pthread rt)
    target_link_libraries(client_${CONN_NAME} PUBLIC pthread rt)
endforeach()